--- a/AddressBook/Web.config
+++ b/AddressBook/Web.config
@@ -16,6 +16,11 @@
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
+    
+    <customErrors mode="On" defaultRedirect="~/Shared/Error.cstml">
+     <!-- <error statusCode="404" redirect="~/ErrorHandler/NotFound"/>-->
+    </customErrors>
+    
   </system.web>
   <system.webServer>
     <modules>
