--- a/AddressBook/AddressBook.csproj
+++ b/AddressBook/AddressBook.csproj
@@ -223,6 +223,7 @@
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ContactsInfo.cs" />
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\ReferenceVariable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
     <Compile Include="Results\ChallengeResult.cs" />
