--- a/AddressBook/Web.config
+++ b/AddressBook/Web.config
@@ -34,9 +34,9 @@
 		<compilation debug="true" targetFramework="4.7.2" />
 		<httpRuntime targetFramework="4.7.2" />
 
-		<!--<customErrors mode="On" defaultRedirect="~/Shared/Error.cstml">-->
-		<!-- <error statusCode="404" redirect="~/ErrorHandler/NotFound"/>-->
-		<!--</customErrors>-->
+		<customErrors mode="On" defaultRedirect="~/Shared/Error.cstml">
+		 <error statusCode="404" redirect="~/ErrorHandler/NotFound"/>
+		</customErrors>
 
 	</system.web>
 	<system.webServer>
